# linux.whisper

./: README.md  dictate.sh  hold_daemon  hold_daemon.c  hold_daemon.py  setup.sh  type_de  type_de.c  type_de.py  whisper-hold.service  whisper-inject.service
inject/: Cargo.toml
inject/src/: main.rs
