[package]
name = "whisper-inject"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
ashpd = { version = "0.13.11", features = ["remote_desktop", "screencast"] }
enumflags2 = "0.7.12"
reis = { version = "0.6.1", features = ["tokio"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std"] }
xkbcommon = "0.9.0"
